# person-reid

./: .gitignore  pyproject.toml  requirements.txt
components/: trainer.py
components/loggers/: tensorboard_logger.py  wandb_logger.py
configs/: factory.py  main_conf.yaml  pose_hrnet.yaml
scripts/: get_orientation.sh  get_pose.sh
src/datasets/: base_dataset.py  ltcc.py  prcc.py  samplers.py  vcclothes.py
src/losses/: __init__.py  arcface_loss.py  circle_loss.py  clothes_based_adversarial_loss.py
src/models/: baseline.py  cvsl_reid.py  loss.py
src/models/hrnet/: pose_hrnet.py
src/models/modules/: fusion_net.py  r50.py  shape_embedding.py
src/models/orientations/: pose_hrnet.py
src/models/utils/: __init__.py
tools/: get_orientation.py  get_pose.py  train_normal_non_contrastive.py  train_orientation_contrastive.py  visual_ranklist.py
