[project]
name = "cvsl-lreid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "matplotlib>=3.9.2",
    "mediapipe>=0.10.15",
    "more-itertools>=10.5.0",
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "pytorch-lightning>=2.4.0",
    "timm>=1.0.9",
    "torch-geometric>=2.6.1",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
]
